fix spinner overlapping text

--- a/src/styles/modals/signup.scss
+++ b/src/styles/modals/signup.scss
@@ -166,12 +166,6 @@
       }
     }
 
-    .spinner-wrapper {
-      position: absolute;
-      right: 17px;
-      top: 17px;
-    }
-
     .icons {
       height: 24px;
       margin-right: 6px;
